tests/rustdoc-ui/intra-doc/private-check.stderr
error: unresolved link to `not::exist`
  --> $DIR/private-check.rs:12:6
   |
LL | /// [not::exist]
   |      ^^^^^^^^^^ no item named `not` in scope
   |
note: the lint level is defined here
  --> $DIR/private-check.rs:6:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

